# motoko-swap

./: Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json
src/motoko-token-swap-backend/: Cargo.toml  motoko-token-swap-backend.did
src/motoko-token-swap-backend/src/: ledger.rs  lib.rs  methods.rs  types.rs
src/motoko-token-swap-frontend/: package.json  vite.config.js
src/motoko-token-swap-frontend/src/: App.jsx  App.tsx  actors.ts  index.scss
src/motoko-token-swap-frontend/src/misc/: constants.ts
src/token-swap-backend/: Cargo.toml  motoko-token-swap-backend.did
src/token-swap-backend/src/: lib.rs  methods.rs
src/token-swap-frontend/: package.json
src/token-swap-frontend/src/: actors.ts
src/token-swap-frontend/src/components/: index.ts
src/token-swap-frontend/src/components/TokenDisplay/: TokenDisplay.tsx
src/token-swap-frontend/src/misc/: tokenHelper.ts
