[package]
name = "motoko-token-swap-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-ledger-types = "0.10.0"
icrc-ledger-types = "0.1.5"
ic-stable-structures = "0.6.4"
serde = "1.0"
serde_bytes = "0.11.14"
